--- a/AddModelProject/packages.config
+++ b/AddModelProject/packages.config
@@ -7,4 +7,5 @@
   <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
+  <package id="Spire.XLS" version="8.3.5" targetFramework="net452" />
 </packages>
