--- a/LibaryCommandPublic/LibaryCommandPublic.csproj
+++ b/LibaryCommandPublic/LibaryCommandPublic.csproj
@@ -30,10 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GalaSoft.MvvmLight">
+      <HintPath>C:\Nuget\MvvmLightLibs.5.4.1\lib\net45\GalaSoft.MvvmLight.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Extras">
+      <HintPath>C:\Nuget\MvvmLightLibs.5.4.1\lib\net45\GalaSoft.MvvmLight.Extras.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Platform">
+      <HintPath>C:\Nuget\MvvmLightLibs.5.4.1\lib\net45\GalaSoft.MvvmLight.Platform.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationFramework" />
     <Reference Include="Prism, Version=6.3.0.0, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,15 +51,22 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAutoit\CommandTestAutoit.cs" />
+    <Compile Include="TestAutoit\SnuOneAuto\AutoCommand\AutoCklicsAisCommand.cs" />
+    <Compile Include="TestAutoit\SnuOneAuto\PublicCommand\CommandFormirovanie.cs" />
+    <Compile Include="TestAutoit\SnuOneAuto\PublicCommand\CommandSnuOneAuto.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AddModelProject\AddModelProject.csproj">
       <Project>{93aca244-ed58-43e5-bec6-05f07e4b475a}</Project>
       <Name>AddModelProject</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LibaryAIS3Windows\LibaryAIS3Windows.csproj">
+      <Project>{92017569-2991-4b9a-bfa2-6b41cfa72b83}</Project>
+      <Name>LibaryAIS3Windows</Name>
     </ProjectReference>
     <ProjectReference Include="..\LibaryXMLAuto\LibaryXMLAuto.csproj">
       <Project>{a2bc3ae2-4a61-4e9e-9fa4-96a02677c79c}</Project>
@@ -60,6 +77,7 @@
       <Name>ViewModelLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
